# parsing-education

./: README.md
aiken/: .gitignore  README.md  aiken.toml  plutus.applied.json  plutus.json
aiken/artifacts/: pool.pool.spend.uplc  request.request.spend.uplc
aiken/lib/: constants.ak  tests.ak  types.ak  utils.ak
aiken/validators/: pool.ak  request.ak
deploy/: .env.example  README.md  package.json
deploy/patches/: @meshsdk%2Fprovider@1.9.0-beta.18.patch
deploy/src/: index.ts
plutarch/: README.md  cabal.project  flake.nix  hie.yaml  parsing-education.cabal
plutarch/app/: Blueprints.hs
plutarch/artifacts/: plutus.json  pool.uplc  request.uplc
plutarch/src/: Constants.hs  Pool.hs  Request.hs  Types.hs  Util.hs
plutarch/test/: Main.hs
plutarch/test/Plutarch/: Test.hs
plutus-tx/: .gitignore  Makefile  README.md  flake.nix  hie.yaml  parsing-education.cabal
plutus-tx/app/: Blueprints.hs
plutus-tx/artifacts/: plutus.json  pool.uplc  request.uplc
plutus-tx/nix/: project.nix  shell.nix
plutus-tx/src/: Constants.hs  Pool.hs  Request.hs  Types.hs  Util.hs
plutus-tx/test/: Main.hs
