cabal-version: 3.0
name:          parsing-education
version:       0.1.0.0
build-type:    Simple
author:        WingRiders
maintainer:    WingRiders
tested-with:   GHC ==9.2.3

common lang
  default-language:   Haskell2010
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -Werror
    -Wpartial-fields -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas
  build-depends:
    , base
    , bytestring
    , plutarch
    , plutarch-ledger-api
    , plutus-ledger-api
    , plutus-tx
    , generics-sop
    , text
  default-extensions:
    BangPatterns
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NumericUnderscores
    OverloadedRecordDot
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances

library contracts
  import:          lang
  ghc-options:
    -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas -fno-spec-constr -fno-specialise
  hs-source-dirs:  src
  exposed-modules:
    Types
    Request
    Pool
    Constants
    Util

  build-depends:
    , aeson
    , aeson-pretty
    , base16-bytestring
    , data-default
    , memory
    , serialise

executable blueprints
  import:         lang
  main-is:        Blueprints.hs
  hs-source-dirs: app
  other-modules:
  build-depends:
    , aeson
    , aeson-pretty
    , base16-bytestring
    , directory
    , filepath
    , serialise
    , split
    , transformers
    , contracts
    , containers

test-suite tests
  import:         lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test
  other-modules:
    Plutarch.Test
  
  ghc-options:
    -Wwarn=missing-home-modules -threaded
    -with-rtsopts=-N

  build-depends:
    , aeson
    , base
    , base16-bytestring         ^>=1.0.2.0
    , cborg                     ^>=0.2.7.0
    , containers
    , data-default
    , mtl
    , prettyprinter
    , serialise
    , tasty
    , tasty-hunit
    , contracts
